Fix spacing at bottom of contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1249,7 +1249,7 @@ body {
     .contact-form{
         background-color: rgba(255, 255, 255, .9);
         width: 95%;
-        height: 650px;
+        height: 600px;
         padding: 3em;
         padding-top: 5%;
         padding-bottom: 5%;
